# resume-screening-agent

./: .gitignore  README.md  render.yaml
backend/: .env_example  pyproject.toml  requirements.txt
backend/src/: config.py  main.py  supervisor.py
backend/src/agents/: base.py  jd_matcher.py  q_gen.py  resume_extractor.py
backend/src/memory/: session_store.py
backend/src/parsers/: file_parser.py
backend/src/prompts/: jd_match.txt  q_gen_behavioral.txt  q_gen_technical.txt  resume_extract.txt
backend/src/schemas/: jd_match.py  question.py  resume.py  session.py
evaluation/: manual_eval.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: JDInput.tsx  MatchScoreCard.tsx  ParsedResumeView.tsx  QuestionsList.tsx  ResumeUploader.tsx
frontend/src/data/: sampleJDs.ts
frontend/src/hooks/: useSession.ts
